# faster-rcnn

./: LICENSE  README.md  pyproject.toml  setup.cfg
src/fasterrcnn/: fasterrcnn.py
src/fasterrcnn/utils/: __init__.py  anchor.py  backbone.py  rcnn.py  rpn.py  transform.py
src/tests/: test_fasterrcnn.py
src/tests/model/: test_anchor.py  test_backbone.py  test_fasterrcnn.py  test_rcnn.py  test_rpn.py
src/tests/utils/: test_anchor.py  test_rcnn.py  test_rpn.py  test_transform.py
