[metadata]
name = fasterrcnn
version = 0.1
url = https://github.com/6hl/faster-rcnn
author = Ben Liggett
author_email = 
description = Scratch implementation of Faster-RCNN
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    torch==1.12.1+cu113
    torchvision==0.13.1+cu113
    numpy==1.23.3
    tqdm==4.64.1

[options.packages.find]
where=src